fix alignment issues

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -122,7 +122,7 @@ body {
         }
     }
     &-email {
-        width: 100%;        
+        width: 100%;
         height: 50px;
         align-self: flex-end;
         position: fixed;
@@ -132,13 +132,13 @@ body {
             @include linkStyles();
             letter-spacing: 0.5em;
             width: 700px;
-            height: 25px; 
-            line-height: 50px;           
+            height: 25px;
+            line-height: 50px;
             display: block;
-            margin: 0 auto;    
+            margin: 0 auto;
             &:hover {
                 letter-spacing: 0.70em;
-            }                                
+            }
         }
     }
 }
@@ -206,7 +206,7 @@ body {
 
 @include breakpoint(xxs) {
     .main__container-svg__container,
-    .contact__container {
+    .contact__container, .main__container-email {
         display: none;
     }
     .main__container-social__links {
